积云后台管理系统

--- a/jy_mms/.env.development
+++ b/jy_mms/.env.development
@@ -1,1 +1,2 @@
-VUE_APP_SERVICE_URL  = "http://120.53.31.103:84/api"
+VUE_APP_SERVICE_URL  = "http://mengxuegu.com:9999/pro-api"
+VUE_APP_BASE_API = "/dev-api"
